Some cleaning code.